# Datajud-Front

./: main.py  models.py  pyproject.toml
models/: orgaos.json  tpu-assuntos.json  tpu-classes.json
static/: index.html  script.js  style.css
