[tool.poetry]
name = "fastapi-jstree-demo"
version = "0.1.0"
description = "Projeto FastAPI com jsTree"
authors = ["Seu Nome <seuemail@dominio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
requests = "^2.32.3"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
